fix action button css bug on mobile

--- a/client/src/Components/Battle/style.css
+++ b/client/src/Components/Battle/style.css
@@ -61,10 +61,6 @@
     .move-card{
         width: 80%;
     }
-
-    .action-button {
-        border: 1px solid black;
-    }
 }
 
 @media screen and (min-width: 981px) {
